--- a/app/views/layouts/tabs/tab_links/_home_active.html.erb
+++ b/app/views/layouts/tabs/tab_links/_home_active.html.erb
@@ -1,4 +1,4 @@
-<%= link_to home_path, 'aria-selected' => true do %>
+<%= link_to user_path(current_user), 'aria-selected' => true do %>
    <i class='fa-solid fa-home'></i> Home 
    <%= render "layouts/tabs/span_indicator" %>
  <% end%>
