--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
   </head>
 
   <body>
-  <%= render "layouts/navbar" %>
-    <%= yield %>
+        <%= render 'layouts/navbar' %>
+        <%= yield%>
   </body>
 </html>
