--- a/app/assets/stylesheets/root/root.scss
+++ b/app/assets/stylesheets/root/root.scss
@@ -15,6 +15,9 @@ body {
    --grey :#F9F9F9;
    --grey-bg :#F4F4F4;
    --text-grey :#575757;
+   --grey-bg :#F4F4F4;
+   --border-grey :#C8C8C8
+   ;
 
    /* PRIMARY */
   --purple: 147, 73, 241;
