--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -36,4 +36,17 @@
          </div>
       </div>
    </div>
+<br>
+<br>
+<br>
+   <div class="input">
+      <p class="input-name"> Name </p>
+      <div class="input-wrapper">
+         <input type='text' placeholder='Entrez votre mot de passe'>
+         <i class="fa-light fa-user"></i>
+      </div>
+   </div> 
+<br>
+<br>
+<br>
 <%end%>
