--- a/app/assets/stylesheets/pages/users.scss
+++ b/app/assets/stylesheets/pages/users.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.user-show{
+   width: 100%;
+   max-width: 80%;
+   padding:40px
+}
+
+
+.wrapper-not-meteo{
+   display: flex;
+   gap: 30px;
+   height: 180px;
+
+   .notification-card{
+      height: 100%;
+      flex: 3;
+   }
+
+   .meteo-card{
+      flex: 7;
+      height: 100%;
+   }
+}
