--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
     </style>
   </head>
 
-  <body>
+  <body style="display:flex">
         <%= render 'layouts/navbar' %>
         <%= yield%>
   </body>
