--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,14 +26,9 @@
     <%= form.text_area :description %>
   </div>
 
-  <div class="field">
-    <%= form.label :latitude %>
-    <%= form.text_field :latitude %>
-  </div>
-
-  <div class="field">
-    <%= form.label :longitude %>
-    <%= form.text_field :longitude %>
+   <div class="field">
+    <%= form.label :address %>
+    <%= form.text_field :address %>
   </div>
 
   <div class="field">
