--- a/app/assets/stylesheets/atoms/forms.scss
+++ b/app/assets/stylesheets/atoms/forms.scss
@@ -14,7 +14,7 @@
       height: fit-content;
       
 
-      input[type=text] {
+      input[type=text], input[type=password], input[type=email] {
          width: 450px;
          border: 1px solid var(--border-grey);
          border-radius: 5px;
