--- a/app/views/layouts/tabs/tab_links/_friends_inactive.html.erb
+++ b/app/views/layouts/tabs/tab_links/_friends_inactive.html.erb
@@ -1,3 +1,3 @@
-<%= link_to friends_path  do %>
+<%= link_to connections_path  do %>
    <i class="fa-solid fa-user-group"></i> Feat Friends
 <% end%>
