--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="user-show">
+<div class="container-dashboard">
   <div class="wrapper-not-meteo">
     <div class="notification-card card"></div>
     <div class="meteo-card card"></div>
