--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing User</h1>
+<div class="container-dashboard">
 
-<%= render 'form', user: @user %>
+   <h1>Editing User</h1>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+   <%= render 'edit_info', user: @user %>
+
+
+</div>
