--- a/app/assets/stylesheets/pages/sign_up_log_in-page/log_in.scss
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/log_in.scss
@@ -1,75 +1,62 @@
 .form-container{
    display: flex;
    flex-direction: row;
-   width: 100%;
-   height: 833px;
-   margin: auto;
-   padding-top: 20px;
-  
+   width: 100vw;
+   height: 100vh;
 
    .form-container-left{
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      padding: 15px;
-
-      width: 741px;
-      height: 833px;
+      flex: 6;
+      width: 100%;
+      height: 100%;
+      border: 15px solid var(--grey-bg);
+      box-sizing: border-box;
 
       .img-fluid{
-         display: flex;
-         justify-content: flex-start;
+         width: 100%;
+         height: 100%;
          border-radius: 8px;
-         width: 711px;
-         height: 833px;
          background: url(https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
-         background-repeat: no-repeat;
-         object-fit: fill;
-         transform: matrix(-1, 0, 0, 1, 0, 0);
+         background-size: 100%;
+         object-fit: cover;  
       }
-     
    }
-
-
    .form-container-right{
       display: flex;
-      flex-direction: row;
+      flex: 4;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 641px;
-      height: 833px;
-
+      width: 100%;
+      height: 100%;
 
       .right-content{
          display: flex;
          flex-direction: column;
-         align-items: center;
          gap: 80px;
-         width: 500px;
-         height: 501px;
-
 
          .top-element{
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            padding: 0px;
-            gap: 3px;
-            isolation: isolate;
+            gap: 5px;
 
-            .title{
-               font-family: var( --bold-font);
-               z-index: 1;
-            }
+            .twins{
+               position: relative;
 
-            .title-lign{
-               position: absolute;
-               width: 253px;
-               height: 10px;
-               top: 195px;
-               background: #EEB115;
-               z-index: 0;
+               .title{
+                  font-family: var( --bold-font);
+                  z-index: 1;
+               }
+   
+               .title-lign{
+                  position: absolute;
+                  top: 22px;
+                  width: 230px;
+                  height: 10px;
+                  padding: 0;
+                  margin: 0;
+                  background: #EEB115;
+                  z-index: -1;
+               }
             }
 
             .under-title{
@@ -77,27 +64,65 @@
                color: var(--text-grey);
             }
          }
-      }
+         .middle-element{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 40px;
+            width: 100%;
+            height: 100%;
+   
+            .middle-content-email{
+               margin-bottom: 15px;
+            }
+           
+            .middle-content-password{
+               margin-bottom: 15px;
+            }  
+            
+            .forgot-your-password{
+               display: flex;
+               justify-content: flex-start; 
+               text-decoration: none;
 
-      .middle-element{
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         padding: 0px;
-         gap: 40px;
+               &:hover{
+                  opacity: 0.8;
+               }
+             }
 
-         width: 493px;
-         height: 359px;
-
-         .middle-content-email{
-            margin: 10px;
+            .checkbox{
+               display: flex;
+               justify-content: flex-start;
+            }
          }
-        
-         .middle-content-password{
-            margin: 10px;
+
+         .bottom{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+            .action{
+               display: flex;
+               flex-direction: column;
+               align-items: center;
+
+               .under-button{
+                  display: flex;
+                  flex-direction: row;
+                  padding: 10px;
+
+                  .subscribe{
+                     justify-content: flex-start;
+                     text-decoration: none;
+                     margin-top: 5px;
+
+                     &:hover{
+                        opacity: 0.8;
+                     }
+                  }
+               }
+            } 
          }
       }
-      
-
    }
 }
