--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,84 +1,36 @@
-
-
 <div class="container-dashboard">
-
    <h1>Editing User</h1>
-
    <%= render 'edit_info', user: @user %>
 
+  <div>
+    <h2>Climbing Performances</h2>
+    <%= render partial: 'climbing_edit_form', locals: {user: @user} %>
+    <%if @user.climbing_perf%>
+      <div class="perf-container"><%= render partial: 'climbing_perf', locals: {user: @user}%></div>
+    <%end%>
+  </div>
+
+  <div>
+    <h2>Running Performances</h2>
+    <%= render partial: 'running_edit_form', locals: {user: @user} %>
+    <%if @user.running_perf%>
+      <div class="perf-container"><%= render partial: 'running_perf', locals: {user: @user}%></div>
+    <%end%>
+  </div>
+
+  <div>
+    <h2>Workout Performances</h2>
+    <%= render partial: 'workout_edit_form', locals: {user: @user} %>
+    <%if @user.workout_perf%>
+      <div class="perf-container"><%= render partial: 'workout_perf', locals: {user: @user}%></div>
+    <%end%>
+  </div>
+  <div>
+    <h2>Tennis Performances</h2>
+  <%= render partial: 'tennis_edit_form', locals: {user: @user} %>
+    <%if @user.tennis_perf %>
+      <div class="perf-container"><%= render partial: 'tennis_perf', locals: {user: @user}%></div>
+    <%end%>
+  </div>
 
 </div>
-
-<div>
-  <h2>Climbing Performances</h2>
-  <%=form_for @user.last_climbing_perf, url: climbing_performances_path, method: :post do |f|%>
-    <div class="field">
-      <%= f.label :level %><br />
-      <%= f.number_field :level, autofocus: true %>
-    </div>
-    <div class="field">
-      <%= f.label :block_color %><br />
-      <%= f.text_field :block_color, autofocus: true %>
-    </div>
-    <div class="actions">
-      <%= f.submit('Soumettre') %>
-    </div>
-  <%end%>
-  <%if !@user.climbing_perf.empty?%>
-    <div class="perf-container"><%= render partial: 'climbing_perf', locals: {user: @user}%></div>
-  <%end%>
-</div>
-<div>
-  <h2>Running Performances</h2>
-  <%=form_for @user.last_running_perf, url: running_performances_path, method: :post do |f|%>
-    <div class="field">
-      <%= f.label :speed %><br />
-      <%= f.number_field :speed, autofocus: true %>
-    </div>
-    <div class="field">
-      <%= f.label :distance %><br />
-      <%= f.text_field :distance, autofocus: true %>
-    </div>
-    <div class="actions">
-      <%= f.submit('Soumettre') %>
-    </div>
-  <%end%>
-  <%if !@user.running_perf.empty?%>
-    <div class="perf-container"><%= render partial: 'running_perf', locals: {user: @user}%></div>
-  <%end%>
-</div>
-<div>
-  <h2>Workout Performances</h2>
-  <%=form_for @user.last_workout_perf, url: workout_performances_path, method: :post do |f|%>
-    <div class="field">
-      <%= f.label :benchpress_weight %><br />
-      <%= f.number_field :benchpress_weight, autofocus: true %>
-    </div>
-    <div class="field">
-      <%= f.label :squat_weight %><br />
-      <%= f.text_field :squat_weight, autofocus: true %>
-    </div>
-    <div class="actions">
-      <%= f.submit('Soumettre') %>
-    </div>
-  <%end%>
-  <%if !@user.workout_perf.empty?%>
-    <div class="perf-container"><%= render partial: 'workout_perf', locals: {user: @user}%></div>
-  <%end%>
-</div>
-<div>
-  <h2>Tennis Performances</h2>
-  <%=form_for @user.last_tennis_perf, url: tennis_performances_path, method: :post do |f|%>
-    <div class="field">
-      <%= f.label :rank %><br />
-      <%= f.number_field :rank, autofocus: true %>
-    </div>
-    <div class="actions">
-      <%= f.submit('Soumettre') %>
-    </div>
-  <%end%>
-  <%if !@user.tennis_perf.empty? %>
-    <div class="perf-container"><%= render partial: 'tennis_perf', locals: {user: @user}%></div>
-  <%end%>
-</div>
-
