--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <%if current_user %>
+<div class="ghost-div">
    <div class="navbar">
-
       <div>
          <div class="user-name">
             <span> <%= current_user.email%> </span>
@@ -25,6 +25,7 @@
          <%= link_to destroy_user_session_path, :method => :delete do %>
             <i class="fa-solid fa-arrow-right-from-bracket"></i>  Se déconnecter 
          <% end%>
+      </div>
       </div>
    </div>
 <%end%>
