--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,16 +65,16 @@
   </div>
   <h2>Partie Sport</h2>
   <%if !@user.running_perf.empty?%>
-    <div class="perf-container"> <%= render partial: 'running_perf', locals: {user: @user}%> </div>
+    <div class="perf-container"> <%= render partial: 'users/performances/running_perf', locals: {user: @user}%> </div>
   <%end%>
   <%if !@user.workout_perf.empty?%>
-    <div class="perf-container"> <%= render partial: 'workout_perf', locals: {user: @user}%> </div>
+    <div class="perf-container"> <%= render partial: 'users/performances/workout_perf', locals: {user: @user}%> </div>
   <%end%>
   <%if !@user.climbing_perf.empty?%>
-    <div class="perf-container"> <%= render partial: 'climbing_perf', locals: {user: @user}%> </div>
+    <div class="perf-container"> <%= render partial: 'users/performances/climbing_perf', locals: {user: @user}%> </div>
   <%end%>
   <%if !@user.tennis_perf.empty?%>
-    <div class="perf-container"> <%= render partial: 'tennis_perf', locals: {user: @user}%> </div>
+    <div class="perf-container"> <%= render partial: 'users/performances/tennis_perf', locals: {user: @user}%> </div>
   <%end%>
 </div>
 <%= javascript_include_tag 'map_box'%>
