modif image sign up form

--- a/app/assets/stylesheets/pages/sign_up_log_in-page/sign_up.scss
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/sign_up.scss
@@ -2,10 +2,10 @@
    flex-direction: row-reverse !important;
 }
       .right-image{
-         background: url(https://images.unsplash.com/photo-1507034589631-9433cc6bc453?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=684&q=80) center !important;
+         background: url(https://images.unsplash.com/photo-1507034589631-9433cc6bc453?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=684&q=80) !important;
          background-repeat: no-repeat !important;
          background-size: 100% !important;
-         background-position: center !important;
+         background-position: 25% 70% !important;
       }
 
       
