--- a/app/assets/stylesheets/atoms/forms.scss
+++ b/app/assets/stylesheets/atoms/forms.scss
@@ -1,6 +1,7 @@
 // CHAMPS INPUT
 
 .input {
+   margin-bottom: 20px;
 
    .input-name{
       margin-bottom: 0.5rem;
@@ -14,7 +15,7 @@
       height: fit-content;
 
 
-      input[type=text], input[type=password], input[type=email] {
+      input[type=text], input[type=password], input[type=email], input[type=number] {
          width: 450px;
          border: 1px solid var(--border-grey);
          border-radius: 5px;
