--- a/app/assets/stylesheets/atoms/navbar.scss
+++ b/app/assets/stylesheets/atoms/navbar.scss
@@ -1,15 +1,17 @@
 .navbar{
-   width: 320px;
+   width: 290px;
    height :100vh;
    background-color: rgb(var(--white));
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
+   top: 0px;
+   left: 0px;
 }
 
 .ghost-div{
-   width: 320px;
+   min-width: 290px;
    height :100vh;
    display: block;
 }
@@ -53,7 +55,7 @@
 
 .separate{
    border: 1px solid #ececec;
-   width : 250px;
+   width : 220px;
    margin-bottom: 20px;   
 }
 
