--- a/app/assets/stylesheets/pages/user/edit.scss
+++ b/app/assets/stylesheets/pages/user/edit.scss
@@ -1,8 +1,46 @@
 .user-info_wrapper{
    display: flex;
-   justify-content: space-between;
+   justify-content: flex-start;
    width: 100%;
-   gap: 20px;
+   gap: 30px;
    margin-bottom: 30px;
    flex-wrap: wrap;
 }
+
+.tab {
+   overflow: hidden;
+
+ }
+ 
+ /* Style the buttons that are used to open the tab content */
+ .tab button {
+   background-color: inherit;
+   margin-right: 5px;
+   float: left;
+   border: none;
+   outline: none;
+   cursor: pointer;
+   padding: 14px 16px 8px 16px;
+   font-size: var(--normal);
+   font-family: var(--bold-font);
+ }
+ 
+ /* Change background color of buttons on hover */
+ .tab button:hover {
+   background-color: rgba(var(--purple), 0.06);
+   border-radius: 5px;
+ }
+ 
+ /* Create an active/current tablink class */
+ .tab button.active {
+   color: rgb(var(--purple));
+   border-bottom: 3px solid rgb(var(--purple)); 
+   box-sizing: border-box;
+ }
+ 
+ /* Style the tab content */
+ .tabcontent {
+   display: none;
+   margin-top: 10px;
+   padding: 6px 12px;
+ }
