--- a/app/views/users/_edit_performance.html.erb
+++ b/app/views/users/_edit_performance.html.erb
@@ -1,31 +1,37 @@
   <div class="card">
       <p class="card-title"> Performance </p>
       <p class="card-icon"> <i class="fa-solid fa-pen-to-square" ></i> </p>
-      <div>
-        <h2>Climbing Performances</h2>
+      
+
+      <div class="tab">
+        <button class="tablinks" onclick="openPerf(event, 'Climbing')" id="defaultOpen">Climbing</button>
+        <button class="tablinks" onclick="openPerf(event, 'Running')">Running</button>
+        <button class="tablinks" onclick="openPerf(event, 'Workout')">Workout</button>
+        <button class="tablinks" onclick="openPerf(event, 'Tennis')">Tennis</button>
+      </div>
+
+      <div id="Climbing" class="tabcontent">
         <%= render partial: 'users/performances/climbing_edit_form', locals: {user: @user} %>
         <%if !@user.climbing_perf.empty?%>
           <div class="perf-container"><%= render partial: 'users/performances/climbing_perf', locals: {user: @user}%></div>
         <%end%>
       </div>
 
-      <div>
-        <h2>Running Performances</h2>
+      <div id="Running" class="tabcontent">
         <%= render partial: 'users/performances/running_edit_form', locals: {user: @user} %>
         <%if !@user.running_perf.empty?%>
           <div class="perf-container"><%= render partial: 'users/performances/running_perf', locals: {user: @user}%></div>
         <%end%>
       </div>
 
-      <div>
-        <h2>Workout Performances</h2>
+      <div id="Workout" class="tabcontent">
         <%= render partial: 'users/performances/workout_edit_form', locals: {user: @user} %>
         <%if !@user.workout_perf.empty?%>
           <div class="perf-container"><%= render partial: 'users/performances/workout_perf', locals: {user: @user}%></div>
         <%end%>
       </div>
-      <div>
-        <h2>Tennis Performances</h2>
+
+      <div id="Tennis" class="tabcontent">
       <%= render partial: 'users/performances/tennis_edit_form', locals: {user: @user} %>
         <%if !@user.tennis_perf.empty? %>
           <div class="perf-container"><%= render partial: 'users/performances/tennis_perf', locals: {user: @user}%></div>
