--- a/app/views/users/performances/_workout_edit_form.html.erb
+++ b/app/views/users/performances/_workout_edit_form.html.erb
@@ -1,13 +1,26 @@
-<%=form_for :workout_performances, url: workout_performances_path, method: :post do |f|%>
-  <div class="field">
-    <%= f.label :benchpress_weight %><br />
-    <%= f.number_field :benchpress_weight, autofocus: true %>
-  </div>
-  <div class="field">
-    <%= f.label :squat_weight %><br />
-    <%= f.text_field :squat_weight, autofocus: true %>
-  </div>
-  <div class="actions">
-    <%= f.submit('Soumettre') %>
-  </div>
-<%end%>
+<div class="flex-row-between-flex-start">
+    <%=form_for :workout_performances, url: workout_performances_path, method: :post do |f|%>
+          <div class="input">
+            <p class="input-name">Benchpress</p>
+            <div class="input-wrapper">
+              <%= f.number_field :benchpress_weight, placeholder: "Rentrez votre vitesse" %>
+              <i class="fa-solid fa-table-picnic"></i>
+            </div> 
+          </div>
+
+          <div class="input">
+            <p class="input-name">Squat</p>
+            <div class="input-wrapper">
+              <%= f.text_field :squat_weight, placeholder: "Rentrez votre nombre de squat" %>
+             <i class="fa-solid fa-transporter"></i>
+            </div> 
+          </div>
+          
+          <div class="input">
+            <div class="actions">
+              <%= f.submit('Soumettre') %>
+            </div>
+          </div>
+    <%end%>
+    <div > <%= image_tag "workout.png" %> </div>
+</div>
