--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,7 @@
             </div> 
 
 
-           <div class ="middle-content-password-confirmation">
+           <div class ="middle-content">
             <div class="input">
              <div class="input-wrapper">
                 <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirmer votre mot de passe" %>
