--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,41 +1,11 @@
 <div class ="form-container">
-  <div class="form-container-left">
-    <div class="password-img img-fluid"></div>
-  </div>
+    <%= render 'image' %>
 
   <div class="form-container-right">
     <div class="right-content"> 
-      <div class="top-element">
-        <div class="twins">
-          <h1 class="title">Reset Password</h1>
-          <hr class ="width-lign title-lign">
-        </div>  
-           <p class ="under-title"> Renseignes ton email pour recevoir le lien de réinitialisation.</p>
-      </div>
-       <div class="middle-element">
-          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-
-          <div class= "middle-content-email">
-            <div class="input">
-             <p class="input-name">Email</p>
-              <div class="input-wrapper">
-               <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Rentrez votre email" %>
-               <i class="fa-solid fa-envelope"></i>
-              </div> 
-            </div>
-          </div>
-       </div>
-
-        <div class="bottom">
-          <div class="input">
-            <div class="actions">
-              <%= f.submit "Send me reset password instructions" %>
-            </div>
-          </div>  
-        </div>
-        <% end %>
-
+      <%= render 'top_element' %>
+      <%= render 'form_element' %>
     </div>  
   </div>
+  
 </div>
