--- a/app/assets/stylesheets/pages/user/edit.scss
+++ b/app/assets/stylesheets/pages/user/edit.scss
@@ -32,11 +32,12 @@
  }
  
  /* Create an active/current tablink class */
- .tab button.active {
+ .tab button.active, .test {
    color: rgb(var(--purple));
-   border-bottom: 3px solid rgb(var(--purple)); 
+   border-bottom: 3px solid rgb(var(--purple)) !important; 
    box-sizing: border-box;
  }
+
  
  /* Style the tab content */
  .tabcontent {
