landing page front sports cards

--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -3,5 +3,6 @@
       <%= render 'navbar_lp'%>
       <%= render 'hero_lp'%>
       <%= render 'features_lp'%>
+      <%= render 'sports_lp'%>
    </div>
 <%end%>
