--- a/app/views/users/_edit_performance.html.erb
+++ b/app/views/users/_edit_performance.html.erb
@@ -11,30 +11,44 @@
       </div>
 
       <div id="Climbing" class="tabcontent">
+      <%if !@user.climbing_perf.empty?%>
         <%= render partial: 'users/performances/climbing_edit_form', locals: {user: @user} %>
-        <%if !@user.climbing_perf.empty?%>
-          <div class="perf-container"><%= render partial: 'users/performances/climbing_perf', locals: {user: @user}%></div>
-        <%end%>
+        <div class="perf-container">
+          <%= render partial: 'users/performances/climbing_perf', locals: {user: @user}%>
+        </div>
+      <%else%>
+        <div class="">Veux tu faire ce sport ?</div>
+        <%= link_to 'Je commence l\'escalade !', sport_users_path(sport: :Climbing), method: :post%>
+      <%end%>
       </div>
 
       <div id="Running" class="tabcontent">
+      <%if !@user.running_perf.empty?%>
         <%= render partial: 'users/performances/running_edit_form', locals: {user: @user} %>
-        <%if !@user.running_perf.empty?%>
-          <div class="perf-container"><%= render partial: 'users/performances/running_perf', locals: {user: @user}%></div>
-        <%end%>
+        <div class="perf-container"><%= render partial: 'users/performances/running_perf', locals: {user: @user}%></div>
+      <%else%>
+        <div class="tbd">Veux tu faire ce sport ?</div>
+        <%= link_to 'Je commence le Running !', sport_users_path(sport: :Running), method: :post%>
+      <%end%>
       </div>
 
       <div id="Workout" class="tabcontent">
+      <%if !@user.workout_perf.empty?%>
         <%= render partial: 'users/performances/workout_edit_form', locals: {user: @user} %>
-        <%if !@user.workout_perf.empty?%>
-          <div class="perf-container"><%= render partial: 'users/performances/workout_perf', locals: {user: @user}%></div>
-        <%end%>
+        <div class="perf-container"><%= render partial: 'users/performances/workout_perf', locals: {user: @user}%></div>
+        <%else%>
+        <div class="tbd">Veux tu faire ce sport ?</div>
+        <%= link_to 'Je commence le Workout !', sport_users_path(sport: :Workout), method: :post%>
+      <%end%>
       </div>
 
       <div id="Tennis" class="tabcontent">
+      <%if !@user.tennis_perf.empty? %>
       <%= render partial: 'users/performances/tennis_edit_form', locals: {user: @user} %>
-        <%if !@user.tennis_perf.empty? %>
           <div class="perf-container"><%= render partial: 'users/performances/tennis_perf', locals: {user: @user}%></div>
-        <%end%>
+        <%else%>
+        <div class="tbd">Veux tu faire ce sport ?</div>
+        <%= link_to 'Je commence le Tennis !', sport_users_path(sport: :Tennis), method: :post%>
+      <%end%>
       </div>
   </div>
