add more element on the landing page

--- a/app/views/static_pages/_navbar_lp.html.erb
+++ b/app/views/static_pages/_navbar_lp.html.erb
@@ -11,7 +11,7 @@
       </ul>
    </div>
    <div class="button-row" >
-      <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
+      <%= link_to 'Se connecter', new_user_session_path, class: 'button primary'%>
       <%= link_to 'Créer un compte', new_user_registration_path, class: 'button primary'%>
    </div>
 </div>
