--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -4,5 +4,6 @@
       <%= render 'hero_lp'%>
       <%= render 'features_lp'%>
       <%= render 'sports_lp'%>
+      <%= render 'convinced_lp'%>
    </div>
 <%end%>
