--- a/app/assets/stylesheets/pages/user/show.scss
+++ b/app/assets/stylesheets/pages/user/show.scss
@@ -7,7 +7,7 @@
 .wrapper-not-meteo{
    display: flex;
    gap: 30px;
-   height: 180px;
+
 
    .notification-card{
       height: 100%;
@@ -18,6 +18,27 @@
       flex: 7;
       height: 100%;
    }
+}
+
+.wrapper-performance{
+   margin: 20px 0px;
+
+   .tabs-items{
+      margin-top: 10px;
+      flex: 1;
+
+      button{
+         color: black;
+      }
+
+      button.active{
+         background-color: var(--bg_running);
+         color: rgb(var(--text_running));
+      }
+   }
+    .tabs-content{
+      flex:9
+    }
 }
 
 
