--- a/app/assets/stylesheets/root/utilities_classes.scss
+++ b/app/assets/stylesheets/root/utilities_classes.scss
@@ -11,3 +11,11 @@
    justify-content: space-between;
    align-items: flex-start;
 }
+
+.flex-col-between-flex-start{
+   display:flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-items: flex-start;
+   gap: 10px
+}
