HG selection dans form et exp/freq

--- a/app/views/users/performances/_climbing_edit_form.html.erb
+++ b/app/views/users/performances/_climbing_edit_form.html.erb
@@ -1,9 +1,25 @@
 <div class="flex-row-between-flex-start">
   <%=form_for :climbing_performances, url: climbing_performances_path, method: :post do |f|%>
       <div class="input">
+        <p class="input-name">Experience</p>
+        <div class="input-wrapper">
+          <%= f.number_field :experience, placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
+          <i class="fa-solid fa-signal"></i>
+        </div> 
+      </div>
+
+      <div class="input">
+        <p class="input-name">Frequence</p>
+        <div class="input-wrapper">
+          <%= f.number_field :frequency, placeholder: "Combien de fois par semaines en fait tu ?" %>
+          <i class="fa-solid fa-signal"></i>
+        </div> 
+      </div>
+      
+      <div class="input">
         <p class="input-name">Level</p>
         <div class="input-wrapper">
-          <%= f.number_field :level, placeholder: "Rentrez votre niveau" %>
+          <%= f.select :level, ClimbingLevel.all.map{|level| level.level} ,placeholder: "Entrez votre niveau" %>
           <i class="fa-solid fa-signal"></i>
         </div> 
       </div>
@@ -11,7 +27,7 @@
       <div class="input">
         <p class="input-name">Block color</p>
         <div class="input-wrapper">
-          <%= f.text_field :block_color, placeholder: "Rentrez votre couleur de block" %>
+          <%= f.select :block_color, ClimbingBlockColor.all.map{|block| block.block_color} ,placeholder: "Rentrez votre couleur de block" %>
           <i class="fa-solid fa-paintbrush"></i>
         </div> 
       </div>
