--- a/app/views/users/performances/_tennis_edit_form.html.erb
+++ b/app/views/users/performances/_tennis_edit_form.html.erb
@@ -1,9 +1,25 @@
 <div class="flex-row-between-flex-start">
     <%=form_for :tennis_performances, url: tennis_performances_path, method: :post do |f|%>
       <div class="input">
-        <p class="input-name">Rank</p>
+        <p class="input-name">Experience</p>
         <div class="input-wrapper">
-          <%= f.text_field :rank, placeholder: "Rentrez votre rang" %>
+          <%= f.number_field :experience, placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
+          <i class="fa-solid fa-signal"></i>
+        </div> 
+      </div>
+
+      <div class="input">
+        <p class="input-name">Frequence</p>
+        <div class="input-wrapper">
+          <%= f.number_field :frequency, placeholder: "Combien de fois par semaines en fait tu ?" %>
+          <i class="fa-solid fa-signal"></i>
+        </div> 
+      </div>
+      
+      <div class="input">
+        <p class="input-name">Rang</p>
+        <div class="input-wrapper">
+          <%= f.select :rank, TennisRank.all.map{|rank| rank.rank} ,placeholder: "Entrez votre rang" %>
           <i class="fa-solid fa-calendar-range"></i>
         </div> 
       </div>
